# avatarme

./: README.md  pyproject.toml
avatarme/: config.py  utils.py
avatarme/utils/: image.py  storage.py
notebooks/: kitchen.ipynb
